@@ -1,3 +1,9 @@
+TinyMCE 4.0.1~core6
+
+	* DAMN CLRF!
+	* Completely overhaul the form styling and templates on Core.
+	-- Charlie Powell <charlie@eval.bz>  Wed, 21 Jan 2015 00:04:18 -0500
+
 TinyMCE 4.0.1~core5
 
 	* Bump copyright date to 2014.
